Improved JS, added start again functionality

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="pg">
       <div class="gc">
         <div class="qd">
-          <button type="button" class="btn btn-primary btn-sm btn-block" name="submitQuestion" onclick="return Survey.loadFile('q1.html');">Start</button>
+          <button type="button" class="btn btn-primary btn-sm btn-block" name="submitQuestion" onclick="return Survey.initSurvey();">Start</button>
         </div>
       </div>
     </div>
