--- a/surveys/1/html/end.html
+++ b/surveys/1/html/end.html
@@ -1,3 +1,8 @@
 <h3 class="smdp_question">Thank you for completing this survey!</h3>
 
 <span class="glyphicon glyphicon-ok-sign smdp"></span>
+
+
+<button type="button" class="btn btn-block btn-success" onclick="return Survey.reset();">
+	<span class="glyphicon glyphicon-repeat"></span> Start Again
+</button>
