--- a/surveys/1/html/q1.html
+++ b/surveys/1/html/q1.html
@@ -37,5 +37,5 @@
       </div>
 
       </div>
-      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_1', 'q2.html');">Next Question »</button>
+      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_1', 'q2.html');">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
 </form>
