--- a/surveys/1/html/q3.html
+++ b/surveys/1/html/q3.html
@@ -18,5 +18,5 @@
       </div>
 
       </div>
-      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_3', false);">Next Question »</button>
+      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_3');">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
 </form>
