--- a/surveys/1/html/q2.html
+++ b/surveys/1/html/q2.html
@@ -43,6 +43,6 @@
       </div>
 
     </div>
-    <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_2', 'q3.html');">Next Question »</button>
+    <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_2', 'q3.html');">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
     </div>
 </form>
