--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <div class="pg">
       <div class="gc">
         <div class="qd">
+          <h3 class="smdp_question">Welcome to our Survey Demo! <br /> Please press 'Start' to begin!</h3>
+
+          <span class="glyphicon glyphicon-question-sign smdp"></span>
+
           <button type="button" class="btn btn-primary btn-sm btn-block" name="submitQuestion" onclick="return Survey.initSurvey();">Start</button>
         </div>
       </div>
