--- a/surveys/1/html/q2.html
+++ b/surveys/1/html/q2.html
@@ -1,4 +1,4 @@
-<form method="POST" action="" id="form-survey-question_2" class="smdp orm-horizontal" autocomplete="off" role="form">
+<form method="POST" action="" id="form-survey-question_2" class="smdp orm-horizontal" autocomplete="off" role="form" data-href="24">
     <div class="question_container">
       <h3 class="smdp_question">Rate the following colors according with their importance to you:</h3>
     </div>
@@ -6,43 +6,43 @@
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Blue</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control rating" id="rating1" maxlength="3" onkeyup="return Survey.ratingUpdate(this);" name="rating1" />
+          <input type="text" class="form-control rating" id="rating1" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating1" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Green</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control rating" id="rating2" maxlength="3" onkeyup="return Survey.ratingUpdate(this);" name="rating2" />
+          <input type="text" class="form-control rating" id="rating2" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating2" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Red</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control rating" id="rating3" maxlength="3" onkeyup="return Survey.ratingUpdate(this);" name="rating3" />
+          <input type="text" class="form-control rating" id="rating3" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating3" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Fuxia</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control rating" id="rating4" maxlength="3" onkeyup="return Survey.ratingUpdate(this);" name="rating4" />
+          <input type="text" class="form-control rating" id="rating4" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating4" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail3" class="col-sm-2 control-label">Yellow</label>
         <div class="col-sm-10">
-          <input type="text" class="form-control rating" id="rating5" maxlength="3" onkeyup="return Survey.ratingUpdate(this);" name="rating5" />
+          <input type="text" class="form-control rating" id="rating5" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating5" />
         </div>
       </div>
 
       <div class="form-group">
-        <label class="col-sm-2 control-label label-total">100</label>
+        <label class="col-sm-2 control-label label-total">24</label>
       </div>
 
     </div>
-    <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_2', 'q3.html');">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
+    <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_2', 3);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
     </div>
 </form>
