--- a/surveys/1/html/q3.html
+++ b/surveys/1/html/q3.html
@@ -12,11 +12,11 @@
 
       <div class="radio">
         <label>
-          <input type="radio" name="student" id="student_no" value="no" onClick="return Survey.changeSubmitButtonStatus(this);" />
+          <input type="radio" name="student" id="student_no" value="no" onClick="return Survey.changeSubmitButtonStatus(this);" data-next="6" />
           No
         </label>
       </div>
 
       </div>
-      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_3', 'q4.html');">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
+      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_3', 4);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
 </form>
