--- a/surveys/1/html/q2.html
+++ b/surveys/1/html/q2.html
@@ -6,35 +6,35 @@
       <div class="form-group">
         <label for="inputEmail3" class="col-xs-8 control-label">Blue</label>
         <div class="col-xs-4">
-          <input type="text" class="form-control rating" id="rating1" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating1" />
+          <input type="number" class="form-control rating" id="rating1" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating1" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail3" class="col-xs-8 control-label">Green</label>
         <div class="col-xs-4">
-          <input type="text" class="form-control rating" id="rating2" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating2" />
+          <input type="number" class="form-control rating" id="rating2" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating2" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail3" class="col-xs-8 control-label">Red</label>
         <div class="col-xs-4">
-          <input type="text" class="form-control rating" id="rating3" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating3" />
+          <input type="number" class="form-control rating" id="rating3" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating3" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail3" class="col-xs-8 control-label">Fuxia</label>
         <div class="col-xs-4">
-          <input type="text" class="form-control rating" id="rating4" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating4" />
+          <input type="number" class="form-control rating" id="rating4" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating4" />
         </div>
       </div>
 
       <div class="form-group">
         <label for="inputEmail3" class="col-xs-8 control-label">Yellow</label>
         <div class="col-xs-4">
-          <input type="text" class="form-control rating" id="rating5" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating5" />
+          <input type="number" class="form-control rating" id="rating5" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating5" />
         </div>
       </div>
 
