--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
           <span class="glyphicon glyphicon-question-sign smdp"></span>
 
-          <button type="button" class="btn btn-primary btn-sm btn-block" name="submitQuestion" onclick="return Survey.initSurvey();">Start</button>
+          <button type="button" class="btn btn-primary btn-sm btn-block start" name="submitQuestion" onclick="return Survey.initSurvey();" disabled="disabled">Please wait ...</button>
         </div>
       </div>
     </div>
