--- a/surveys/1/html/q1.html
+++ b/surveys/1/html/q1.html
@@ -1,4 +1,4 @@
-<form method="POST" action="" id="form-survey-question_1" class="smdp" autocomplete="off" role="form">
+<form method="POST" action="" id="Q1" class="smdp" autocomplete="off" role="form">
     <div class="question_container">
       <h3 class="smdp_question">Which are your favourite colors?</h3>
     </div>
@@ -37,5 +37,5 @@
       </div>
 
       </div>
-      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_1', 2);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
+      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#Q1', 2);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
 </form>
