--- a/surveys/1/html/q5.html
+++ b/surveys/1/html/q5.html
@@ -1,4 +1,4 @@
-<form method="POST" action="" id="form-survey-question_5" class="smdp" autocomplete="off" role="form">
+<form method="POST" action="" id="Q5" class="smdp" autocomplete="off" role="form">
     <div class="question_container">
       <h3 class="smdp_question">Would you say our web site is:?</h3>
     </div>
@@ -170,5 +170,5 @@
 
 		</table>
     </div>
-      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_5', 6);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
+      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#Q5', 6);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
 </form>
