--- a/surveys/1/html/q2.html
+++ b/surveys/1/html/q2.html
@@ -1,48 +1,22 @@
-<form method="POST" action="" id="form-survey-question_2" class="smdp orm-horizontal" autocomplete="off" role="form" data-href="100">
-    <div class="question_container">
-      <h3 class="smdp_question">Rate the following colors according with their importance to you:</h3>
-    </div>
-    <div class="options_container">
-      <div class="form-group">
-        <label for="inputEmail3" class="col-xs-8 control-label">Blue</label>
-        <div class="col-xs-4">
-          <input type="number" class="form-control rating" id="rating1" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating1" />
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="inputEmail3" class="col-xs-8 control-label">Green</label>
-        <div class="col-xs-4">
-          <input type="number" class="form-control rating" id="rating2" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating2" />
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="inputEmail3" class="col-xs-8 control-label">Red</label>
-        <div class="col-xs-4">
-          <input type="number" class="form-control rating" id="rating3" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating3" />
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="inputEmail3" class="col-xs-8 control-label">Fuxia</label>
-        <div class="col-xs-4">
-          <input type="number" class="form-control rating" id="rating4" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating4" />
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="inputEmail3" class="col-xs-8 control-label">Yellow</label>
-        <div class="col-xs-4">
-          <input type="number" class="form-control rating" id="rating5" maxlength="3" onkeyup="return Survey.constantSumUpdate(this);" name="rating5" />
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label class="col-xs-3 control-label label-total">100</label>
-      </div>
-
-    </div>
-    <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_2', 3);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
-    </div>
+<form method="POST" action="" id="Q2" class="smdp" autocomplete="off" role="form">
+<div class="question_container">
+      <h3 class="smdp_question">At what level of education?</h3>
+</div>
+<div class="options_container">
+<div class="checkbox">
+	<label>
+		<input type="checkbox" name="Q2" id="option_A" value="Bachelor" onClick="return Survey.changeSubmitButtonStatus(this);" data-next="" /> Bachelor
+	</label>
+</div>
+<div class="checkbox">
+	<label>
+		<input type="checkbox" name="Q2" id="option_B" value="Master's" onClick="return Survey.changeSubmitButtonStatus(this);" data-next="2" /> Master's
+	</label>
+</div>
+<div class="checkbox">
+	<label>
+		<input type="checkbox" name="Q2" id="option_C" value="PHD" onClick="return Survey.changeSubmitButtonStatus(this);" data-next="" /> PHD
+	</label>
+</div>
+	<button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#Q2', 3);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
 </form>
