--- a/surveys/1/html/q3.html
+++ b/surveys/1/html/q3.html
@@ -1,4 +1,4 @@
-<form method="POST" action="" id="form-survey-question_3" class="smdp" autocomplete="off" role="form">
+<form method="POST" action="" id="Q3" class="smdp" autocomplete="off" role="form">
     <div class="question_container">
       <h3 class="smdp_question">Are you a student?</h3>
     </div>
@@ -18,5 +18,5 @@
       </div>
 
       </div>
-      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_3', 4);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
+      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#Q3', 4);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
 </form>
