--- a/surveys/1/html/q4.html
+++ b/surveys/1/html/q4.html
@@ -1,9 +1,9 @@
-<form method="POST" action="" id="form-survey-question_4" class="smdp" autocomplete="off" role="form">
-    <div class="question_container">
-      <h3 class="smdp_question">Comments?</h3>
-    </div>
+<form method='POST' action='' id='Q4' class='smdp' autocomplete='off' role='form'>
+  <div class="question_container">
+  <h3 class="smdp_question">What are your thoughts about model driven development?</h3>
+  </div>
     <div class="options_container">
-      <textarea class="form-control" rows="3" cols="40" name="comments" onkeyup="return Survey.validateTextarea(this);"></textarea>
+      <textarea class="form-control" rows="3" cols="40" name="Q4" onkeyup="return Survey.validateTextarea(this);"></textarea>
     </div>
-      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#form-survey-question_4', 5);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
-</form>
+          <button type="button" class="btn btn-primary btn-sm btn-block"  name="submitQuestion" onclick="return Survey.saveAnswerData('#Q4', 5);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
+</form> 
