--- a/surveys/1/html/q6.html
+++ b/surveys/1/html/q6.html
@@ -1,4 +1,4 @@
-<form method="POST" action="" id="Q6" class="smdp last required" autocomplete="off" role="form">
+<form method="POST" action="" id="Q6" class="smdp required" autocomplete="off" role="form">
     <div class="question_container">
       <h3 class="smdp_question">When thinking about Data Mining Technologies, Inc. (DMT), do you believe that the word “innovative” aptly describes or poorly describes the company? On a scale of +5 to -5 with +5 being “very good description of DMT” and -5 being “poor description of DMT,” how do you rank DMT according to the word “innovative”?</h3>
     </div>
@@ -326,5 +326,5 @@
 
 		</table>
     </div>
-      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#Q6');">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
+      <button type="button" class="btn btn-primary btn-sm btn-block" disabled="disabled" name="submitQuestion" onclick="return Survey.saveAnswerData('#Q6', 7);">Next Question <span class="glyphicon glyphicon-chevron-right"></span></button>
 </form>
